# Illumia-D2D-MCP

./: .gitignore  BRAINSTORM.md  README.md  pyproject.toml
.github/: copilot_instructions.md
.github/skills/illumia/: SKILL.md
.github/skills/illumia-xsell/: SKILL.md
illumia_d2d_mcp/: __init__.py  __main__.py  cross_sell.py  demo_mode.py  docs_context.md  errors.py  note_parser.py  product_catalog.py  server.py  widgets.py
illumia_d2d_mcp/fixtures/: detect_cross_sell_leads.json  generate_system_bom.json  ingest_discovery_notes.json  map_to_quickcharge_stack.json
illumia_d2d_mcp/fixtures/narratives/: discovery_hangover.md  ecosystem_goldmine.md  hospital_complex.md
