[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "illumia-d2d-mcp"
version = "0.1.0"
description = "Illumia D2D -- Discovery-to-Diagram MCP server for translating campus walkthrough notes into Quickcharge architectures and cross-sell leads"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
illumia-d2d-mcp = "illumia_d2d_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["illumia_d2d_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"illumia_d2d_mcp/docs_context.md" = "illumia_d2d_mcp/docs_context.md"
"illumia_d2d_mcp/fixtures" = "illumia_d2d_mcp/fixtures"
